What's New in Python 2.2.3 ?
Release date: XX-XXX-2003
============================

- SF #705836: The platform-independent routines for packing floats in
  IEEE formats (struct.pack's <f, >f, <d, and >d codes; pickle and
  cPickle's protocol 1 pickling of floats) ignored that rounding can
  cause a carry to propagate.  The worst consequence was that, in rare
  cases, <f and >f could produce strings that, when unpacked again,
  were a factor of 2 away from the original float.  This has been
  fixed.

- Backported SF patch #676342: after using pdb, the readline command
  completion was botched.

- Fix problem building on OSF1 because the compiler only accepted
  preprocessor directives that start in column 1.  (SF bug #691793.)

- Fixed two places in PyObject_Generic{Get,Set}Attr() where the
  tp_descr_{get,set} slot of a descriptor's type was accessed without
  checking tp_flags whether those slots actually exist.  This could
  cause segfaults in Zope.

- The imp module now has ways to acquire and release the "import
  lock": imp.acquire_lock() and imp.release_lock().  Note: this is a
  reentrant lock, so releasing the lock only truly releases it when
  this is the last release_lock() call.  You can check with
  imp.lock_held().  (SF bug #580952 and patch #683257.)

- Through a bytecode optimizer bug (and I bet you didn't even know
  Python *had* a bytecode optimizer :-), "unsigned" hex/oct constants
  with a leading minus sign would come out with the wrong sign.
  ("Unsigned" hex/oct constants are those with a face value in the
  range sys.maxint+1 through sys.maxint*2+1, inclusive; these have
  always been interpreted as negative numbers through sign folding.)
  E.g. 0xffffffff is -1, and -(0xffffffff) is 1, but -0xffffffff would
  come out as -4294967295.  This was the case in Python 2.2 through
  2.2.2 and 2.3a1, and in Python 2.4 it will once again have that
  value, but according to PEP 237 it really needs to be 1 in Python
  2.2.3 and 2.3.  (SF #660455)
